# BrainBinge-Video-Editor

./: .env.example  .gitignore  .pre-commit-config.yaml  API_SPEC.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: brand_example.yaml  default_style.json  schema.json
data/: README.md  README.txt
data/fonts/: README.md
data/input/: sample_broll_plan.csv
data/test_samples/: README.md
docs/: CLI_GUIDE.md  INSTALL.md  TRANSITION_PLAN.md  TRANSITION_USAGE.md  TROUBLESHOOTING.md
scripts/: verify_env.py
src/: __init__.py  cli.py  config.py  pipeline.py
src/api/: __init__.py  pexels_client.py
src/core/: __init__.py  orchestrator.py  processor.py
src/modules/: __init__.py  alignment.py  audio.py  broll.py  captions.py  composer.py  composition.py  encoding.py  styling.py  transitions.py
src/utils/: __init__.py  cli_helpers.py  colors.py  config_loader.py  ffmpeg_helpers.py  ffmpeg_utils.py  logging.py  text_processing.py  validation.py
tests/: __init__.py  conftest.py
tests/integration/: test_cli.py  test_pipeline.py
tests/unit/: test_alignment.py  test_audio.py  test_captions.py  test_colors.py  test_composer.py  test_config.py  test_pexels.py  test_styling.py
