[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heygen-social-clipper"
version = "0.1.0-alpha"
description = "Transform HeyGen AI videos into viral social media content"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "BrainBinge", email = "support@brainbinge.com"}
]
maintainers = [
    {name = "BrainBinge", email = "support@brainbinge.com"}
]
keywords = [
    "video",
    "processing",
    "heygen",
    "social-media",
    "automation",
    "tiktok",
    "instagram",
    "youtube-shorts",
    "captions",
    "subtitles"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Natural Language :: English",
]
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pysubs2>=1.6.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "Click>=8.1.7",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "jsonschema>=4.20.0",
    "requests>=2.31.0",
    "urllib3>=2.1.0",
    "tqdm>=4.66.1",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
]
webhook = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]
cloud = [
    "boto3>=1.34.0",
    "google-cloud-storage>=2.10.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.39.0",
]
all = [
    "heygen-social-clipper[dev,webhook,cloud,monitoring]",
]

[project.urls]
Homepage = "https://github.com/yourusername/heygen-social-clipper"
Documentation = "https://github.com/yourusername/heygen-social-clipper/blob/main/README.md"
Repository = "https://github.com/yourusername/heygen-social-clipper"
Issues = "https://github.com/yourusername/heygen-social-clipper/issues"
Changelog = "https://github.com/yourusername/heygen-social-clipper/blob/main/CHANGELOG.md"

[project.scripts]
heygen-clipper = "src.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src", "src.core", "src.modules", "src.utils", "src.api"]

[tool.setuptools.package-data]
src = ["py.typed"]

# ============================================================================
# Black Configuration
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

# ============================================================================
# isort Configuration
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".venv", "venv", "build", "dist", "data"]

# ============================================================================
# mypy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ============================================================================
# pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests (skip with -m 'not slow')",
    "requires_ffmpeg: Tests requiring FFmpeg installation",
    "requires_api: Tests requiring external API access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# Ruff Configuration (Alternative to flake8)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "data",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["F401", "F811"]  # allow unused imports and redefinitions in tests

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["src"]
