[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heygen-social-clipper"
version = "0.1.0-alpha"
description = "Transform HeyGen AI videos into viral social media content"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
authors = [
    {name = "BrainBinge", email = "support@brainbinge.com"}
]
maintainers = [
    {name = "BrainBinge", email = "support@brainbinge.com"}
]
keywords = [
    "video",
    "processing",
    "heygen",
    "social-media",
    "automation",
    "tiktok",
    "instagram",
    "youtube-shorts",
    "captions",
    "subtitles"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Natural Language :: English",
]
dependencies = [
    "ffmpeg-python>=0.2.0,<0.3.0",
    "pysubs2>=1.6.0,<2.0.0",
    "torch>=2.1.0,<2.3.0",
    "torchaudio>=2.1.0,<2.3.0",
    "transformers>=4.35.0,<5.0.0",
    "librosa>=0.10.0,<0.11.0",
    "soundfile>=0.12.1,<0.13.0",
    "Pillow>=10.1.0,<11.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "Click>=8.1.7,<9.0.0",
    "PyYAML>=6.0.1,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "jsonschema>=4.20.0,<5.0.0",
    "requests>=2.31.0,<3.0.0",
    "urllib3>=2.1.0,<3.0.0",
    "chardet>=5.2.0,<6.0.0",
    "idna>=3.6,<4.0",
    "certifi>=2023.11.17",
    "tqdm>=4.66.1,<5.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "colorama>=0.4.6,<0.5.0",
    "regex>=2023.10.3,<2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "pytest-randomly>=3.15.0,<4.0.0",
    "black>=23.12.0,<24.0.0",
    "isort>=5.13.0,<6.0.0",
    "flake8>=6.1.0,<7.0.0",
    "flake8-docstrings>=1.7.0,<2.0.0",
    "flake8-bugbear>=23.12.2,<24.0.0",
    "ruff>=0.1.8,<1.0.0",
    "mypy>=1.7.0,<2.0.0",
    "types-PyYAML>=6.0.12,<7.0.0",
    "types-requests>=2.31.0,<3.0.0",
    "types-python-dateutil>=2.8.19,<3.0.0",
    "pre-commit>=3.6.0,<4.0.0",
    "bandit>=1.7.5,<2.0.0",
    "pip-audit>=2.6.0,<3.0.0",
    "ipython>=8.18.0,<9.0.0",
    "ipdb>=0.13.13,<1.0.0",
]
webhook = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "httpx>=0.25.0,<1.0.0",
]
cloud = [
    "boto3>=1.34.0,<2.0.0",
    "google-cloud-storage>=2.10.0,<3.0.0",
]
monitoring = [
    "prometheus-client>=0.19.0,<1.0.0",
    "sentry-sdk>=1.39.0,<2.0.0",
]
all = [
    "heygen-social-clipper[dev,webhook,cloud,monitoring]",
]

[project.urls]
Homepage = "https://github.com/colehanan1/BrainBinge-Video-Editor"
Documentation = "https://github.com/colehanan1/BrainBinge-Video-Editor/blob/main/README.md"
Repository = "https://github.com/colehanan1/BrainBinge-Video-Editor"
Issues = "https://github.com/colehanan1/BrainBinge-Video-Editor/issues"
Changelog = "https://github.com/colehanan1/BrainBinge-Video-Editor/blob/main/CHANGELOG.md"

[project.scripts]
heygen-clipper = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["py.typed", "*.yaml", "*.json"]

# ============================================================================
# Black Configuration - Opinionated Code Formatting
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | data
  | __pycache__
)/
'''

# ============================================================================
# isort Configuration - Import Statement Sorting
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".venv", "venv", "build", "dist", "data", "__pycache__"]
known_first_party = ["src"]
known_third_party = [
    "click",
    "pydantic",
    "yaml",
    "torch",
    "numpy",
    "PIL",
    "ffmpeg",
    "pysubs2"
]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

# ============================================================================
# mypy Configuration - Static Type Checking
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "ffmpeg.*",
    "pysubs2.*",
    "librosa.*",
    "soundfile.*",
]
ignore_missing_imports = true

# ============================================================================
# pytest Configuration - Testing Framework
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=0",  # Set to desired coverage threshold (e.g., 80)
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests (skip with -m 'not slow')",
    "requires_ffmpeg: Tests requiring FFmpeg installation",
    "requires_api: Tests requiring external API access",
    "requires_gpu: Tests requiring GPU/hardware acceleration",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
console_output_style = "progress"
log_cli = false
log_cli_level = "INFO"

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
    "*/.venv/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",  # Literal ellipsis
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# Ruff Configuration - Fast Python Linter
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E203",  # whitespace before ':' (conflicts with black)
]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "data",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # unused imports in __init__.py
"tests/*" = ["F401", "F811", "ARG"]  # allow unused imports and redefinitions in tests
"src/cli.py" = ["ARG"]  # Click decorators cause false positives

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.isort]
known-first-party = ["src"]

# ============================================================================
# Bandit Configuration - Security Linting
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "data", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used check (common in tests)

# ============================================================================
# Flake8 Configuration (legacy - prefer ruff)
# ============================================================================
# Note: flake8 doesn't support pyproject.toml natively
# Use .flake8 or setup.cfg if needed
# Or migrate fully to ruff

# ============================================================================
# Build Configuration
# ============================================================================
[tool.setuptools.dynamic]
# version = {attr = "src.__version__"}  # Uncomment to use dynamic versioning

[tool.setuptools_scm]
# Uncomment to use setuptools_scm for version from git tags
# write_to = "src/_version.py"
